--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
-ffmpeg
+# Dependencies
+FFmpeg - To extract audio from videos
+
+#Download the latest version of ffmpeg
+https://www.gyan.dev/ffmpeg/builds/ffmpeg-git-full.7z
+
+#Extract the file to C:\ and rename to ffmpeg (i.e. C:\ffmpeg)
+
+#Run command prompt as administrator
+
+#Set the path of ffmpeg folder to the PATH environment variable
+setx /m PATH "C:\ffmpeg\bin;%PATH%"
+
+#Restart the computer for the environment variable to be recognized
